trunk/Archive/0ff613fec77c64ee4ed069b14c27d646-a4286dab954ca44891e920524d97c1aa/output
main.cpp:1:1: error: 'Uniform' does not name a type
 Uniform& operator[](std:string name) {
 ^
